<!-- 
	© Mingwei Li, 2014. All rights reserved. 
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <ListPreference
        android:key="@string/settings_default_location_key"
        android:title="@string/settings_default_location_label"
        android:summary="@string/settings_default_location_summary"
        android:dialogTitle="@string/settings_default_location_dialog_title"
        android:entries="@array/settings_default_location_choices"
        android:entryValues="@array/settings_default_location_choices"
        android:defaultValue="@string/settings_default_location_default_value" />
    
    <ListPreference
        android:key="@string/settings_default_travel_mode_key"
        android:title="@string/settings_default_travel_mode_label"
        android:summary="@string/settings_default_travel_mode_summary"
        android:dialogTitle="@string/settings_default_travel_mode_dialog_title"
        android:entries="@array/settings_default_travel_mode_choices"
        android:entryValues="@array/settings_default_travel_mode_choices"
        android:defaultValue="@string/settings_default_location_default_value" />
</PreferenceScreen>