<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome_background_image"
    tools:context=".WelcomeActivity" >

    <ImageView
        android:id="@+id/welcome_logo_imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/placeholder"
        android:src="@drawable/welcome_logo" />
    
    <TextView
        android:id="@+id/welcome_uic_name_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_logo_imageview"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/welcome_uic_name_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/welcome_cs_name_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_uic_name_textview"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome_cs_name_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/welcome_author_name_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_cs_name_textview"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome_author_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/welcome_supervised_by_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_author_name_textview"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome_supervised_by_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/welcome_supervisor_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_supervised_by_textview"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome_supervisor_by_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <Button
        android:id="@+id/welcome_start_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:onClick="getStartedAction"
        android:text="@string/welcome_start_button_label" />

    <CheckBox
        android:id="@+id/welcome_not_show_again_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/welcome_start_button"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="4dp"
        android:background="@color/black_overlay"
        android:text="@string/welcome_not_show_again_label" />

</RelativeLayout>
