<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/alert_instruction_label_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="3dp"
        android:ellipsize="end"
        android:singleLine="false"
        android:text="@string/alert_instruction"
        android:textColor="@color/blue_bright" />

    <ImageView
        android:id="@+id/alert_instruction_screenshot_imageview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/alert_instruction_screenshot"
        android:contentDescription="@string/placeholder" />

    <CheckBox
        android:id="@+id/alert_not_show_again_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/alert_not_show_again_label" />

</LinearLayout>
