<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="30dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/navigation_from_label_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="36dp"
        android:text="@string/navigation_from_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/navigation_from_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/navigation_from_label_textview"
        android:layout_marginLeft="24dp"
        android:layout_toRightOf="@+id/navigation_from_label_textview"
        android:ems="10"
        android:enabled="false"
        android:inputType="text" />

    <ImageButton
        android:id="@+id/navigation_locate_from_imagebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/navigation_from_edittext"
        android:layout_below="@+id/navigation_from_edittext"
        android:src="@drawable/ic_action_location_found"
        android:onClick="useMyLocationFrom" />

    <Button
        android:id="@+id/navigation_select_from_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/navigation_from_edittext"
        android:layout_alignTop="@+id/navigation_locate_from_imagebutton"
        android:text="@string/navigation_select_building_button_label" 
        android:onClick="startFromSelection"/>

    <TextView
        android:id="@+id/navigation_to_label_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/navigation_from_label_textview"
        android:layout_below="@+id/navigation_locate_from_imagebutton"
        android:layout_marginTop="31dp"
        android:text="@string/navigation_to_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageButton
        android:id="@+id/navigation_locate_to_imagebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/navigation_to_edittext"
        android:layout_below="@+id/navigation_to_edittext"
        android:src="@drawable/ic_action_location_found"
        android:onClick="useMyLocationTo" />

    <EditText
        android:id="@+id/navigation_to_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/navigation_to_label_textview"
        android:layout_alignLeft="@+id/navigation_locate_from_imagebutton"
        android:ems="10"
        android:inputType="text"
        android:enabled="false" />

    <Button
        android:id="@+id/navigation_select_to_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/navigation_to_edittext"
        android:layout_alignTop="@+id/navigation_locate_to_imagebutton"
        android:text="@string/navigation_select_building_button_label"
        android:onClick="startToSelection" />

</RelativeLayout>
